--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,32 +1,35 @@
+on: [push, pull_request]
 name: Test
-on: 
-  push:
-    branches:
-      - master
-
 jobs:
-  build:
-    runs-on: unbuntu-latest
+  test:
+    strategy:
+      matrix:
+        go-version: [1.14.x, 1.15.x]
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Setup Go
+    - name: Install Go
       uses: actions/setup-go@v2
       with:
-        go-version: '1.14.0'
+        go-version: ${{ matrix.go-version }}
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Test
+      run: go test ./...
 
-    - name: Install dependencies
-      run: |
-        go version
-        go get -u golang.org/x/lint/golint
-    
-    - name: Run build
-      run: go build .
-
-    - name: Run vet & lint
-      run: |
-        go vet .
-        golint .
-      
-    - name: Run testing
-      run: go test -v -race -cover
+  test-gopath:
+    env:
+      GOPATH: ${{ github.workspace }}
+      GO111MODULE: off
+    runs-on: ubuntu-latest
+    steps:
+    - name: Install Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.15.x
+    - name: Checkout code
+      uses: actions/checkout@v2
+      with:
+        path: ./src/github.com/${{ github.repository }}
+    - name: Test
+      run: go test ./...
