--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,4 +1,6 @@
-on: [push, pull_request]
+on: [push]
+  branches:
+    - master
 name: Test
 jobs:
   test:
@@ -15,12 +17,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Test
-      run: go test ./...
-
-  test-gopath:
-    env:
-      GOPATH: ${{ github.workspace }}
-      GO111MODULE: off
+      run: go test -v -race -cover ./...
+  
+  benchmark:
     runs-on: ubuntu-latest
     steps:
     - name: Install Go
@@ -29,7 +28,5 @@ jobs:
         go-version: 1.15.x
     - name: Checkout code
       uses: actions/checkout@v2
-      with:
-        path: ./src/github.com/${{ github.repository }}
-    - name: Test
-      run: go test ./...
+    - name: Benchmark
+      run: go test -bench=. 
