--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,7 +2,7 @@ on:
   push:
     branches:
     - master
-name: Test
+name: test and build
 jobs:
   test:
     strategy:
@@ -19,15 +19,3 @@ jobs:
       uses: actions/checkout@v2
     - name: Test
       run: go test -v -race -cover ./...
-  
-  benchmark:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Install Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.15.x
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Benchmark
-      run: go test -bench=. 
