--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -24,7 +24,7 @@ jobs:
           infile: coverage.out
           outfile: coverage.lcov
     - name: Coveralls
-      uses: coverallsapp/github-action@v1.0.1
+      uses: coverallsapp/github-action@master
       with:
           github-token: ${{ secrets.COVERALL }}
           path-to-lcov: coverage.lcov
