--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -22,7 +22,7 @@ jobs:
           infile: coverage.out
           outfile: coverage.lcov
     - name: Coveralls
-      uses: coverallsapp/github-action@master
+      uses: coverallsapp/github-action@v1.1.2
       with:
           github-token: ${{ secrets.COVERALL }}
           path-to-lcov: coverage.lcov
