--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -24,5 +24,5 @@ jobs:
     - name: Coveralls
       uses: coverallsapp/github-action@v1.1.2
       with:
-          github-token: ${{ secrets.COVERALL }}
+          github-token: ${{ secrets.github_token }}
           path-to-lcov: coverage.lcov
